--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -436,6 +436,7 @@ We combined the idea of gradient-based selection with two alternative approaches
 
 
     \begin{table}
+           \vspace{1em}
         \centering
         \caption{Object-wise Performance on the Stuttgart dataset. Each row shows the performance after selecting 10 samples with the different methods and refining the network.}
         \begin{tabular}{@{}cccccc@{}} 
