--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -169,8 +169,8 @@ random sampling for annotation as well as uncertainty-based approaches.
 \section{RELATED WORK}
 \label{sec:related}
 
-Several works focusing on the elimination or reduction of herbicide
-through the incorporation of autonomous ground robots in crop fields have
+Several works focusing on the elimination or reduction of herbicide use,
+through the incorporation of autonomous ground robots in crop fields, have
 been introduced to the community in the last years~\cite{ducket2018arxiv, liebisch2016wslw, mccool2018ral}.
 A key component of each of these unmanned platforms is a core perception system that
 has the ability to accurately distinguish crops from weeds in order to effectively
