fixed phenorob acks

--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -64,7 +64,7 @@
 
 \author{Rasha Sheikh \and Philipp Lottes \and Andres Milioto \and Cyrill Stachniss \and Maren Bennewitz \and Thomas Schultz% <-this % stops a space
   \thanks{All authors are with the University of
-    Bonn, Germany. This work has partly been supported by the DFG-funded Cluster of Excellence EXC~2070 PhenoRob.}%
+    Bonn, Germany. This work has partly been supported by the German Research Foundation under Germany's Excellence Strategy, EXC-2070 - 390732324 (PhenoRob).}%
 }
 
 \begin{document}
