reference additional papers

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -382,3 +382,47 @@ url = {http://www.ipb.uni-bonn.de/pdfs/milioto17uavg.pdf}
   pages     = {2999--3007},
   year      = {2017}
 }
+
+@article{du2018adapting,
+  title={Adapting auxiliary losses using gradient similarity},
+  author={Du, Yunshu and Czarnecki, Wojciech M and Jayakumar, Siddhant M and Pascanu, Razvan and Lakshminarayanan, Balaji},
+  journal={arXiv preprint arXiv:1812.02224},
+  year={2018}
+}
+
+
+@inproceedings{wei2018revisiting,
+  title={Revisiting dilated convolution: A simple approach for weakly-and semi-supervised semantic segmentation},
+  author={Wei, Yunchao and Xiao, Huaxin and Shi, Honghui and Jie, Zequn and Feng, Jiashi and Huang, Thomas S},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={7268--7277},
+  year={2018}
+}
+
+
+@inproceedings{acuna2018efficient,
+  title={Efficient interactive annotation of segmentation datasets with polygon-rnn++},
+  author={Acuna, David and Ling, Huan and Kar, Amlan and Fidler, Sanja},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={859--868},
+  year={2018}
+}
+
+@inproceedings{tang2018normalized,
+  title={Normalized cut loss for weakly-supervised CNN segmentation},
+  author={Tang, Meng and Djelouah, Abdelaziz and Perazzi, Federico and Boykov, Yuri and Schroers, Christopher},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={1818--1827},
+  year={2018}
+}
+
+@inproceedings{kwak2017weakly,
+  title={Weakly supervised semantic segmentation using superpixel pooling network},
+  author={Kwak, Suha and Hong, Seunghoon and Han, Bohyung},
+  booktitle={Thirty-First AAAI Conference on Artificial Intelligence},
+  year={2017}
+}
+
+
+
+
